# NEXORA

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bootstrap.py  cleanup_nexora.py  diagnostic_check.py  main.py  mypy.ini  pyproject.toml  repair_nexora.py  requirements-dev.txt  requirements-lock.txt  requirements.txt  structure_dirs.txt  structure_filtered.txt  test_imports.py  test_meta_agent.py  validate_nexora.py
ai/: agent_core.py  deep_q_network.py  memory_buffer.py  meta_agent.py  meta_optimizer.py  regime_detector.py  regime_forecaster.py  reward_functions.py  strategy_adapter.py  temporal_memory.py  train_regime_lstm.py
backtest/: backtest_runner.py  performance_metrics.py  report_generator.py
config/: settings.yaml  settings_loader.py
core/: regime_detector.py  strategy_selector.py
data/: BTC_USD_1m.csv  ETH_USD_1m.csv  download_kraken_data.py  feature_store.py  ingestion.py  integrity_report.csv  integrity_universal_report.csv  kraken_client.py
docs/: nexora_project_summary.md
execution/: order_manager.py
live/: data_feed.py  live_engine.py  paper_executor.py
logs/: equity_curve.csv  live_snapshot.csv  nexora.log.1  system_health.json  test_utils_output.json  trade_log.csv  trades.csv
monitoring/: live_dashboard.py  live_logger.py  live_monitor.py  logging_utils.py  monitor.py
optimization/: optimization_reporter.py  optimization_runner.py
portfolio/: allocator.py  trade_logger.py
risk/: risk_manager.py
strategies/: base_strategy.py  mean_reversion.py  microstructure.py  statistical_arbitrage.py  trend.py  (+2 more)
(+67 files in other folders)
