[project]
name = "nexora"
version = "0.2.0"
description = "Adaptive AI framework for regime detection and strategy optimization in quantitative trading."
authors = [{ name = "tobollie2" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.25",
    "pandas>=2.0",
    "torch>=2.1",
    "scikit-learn>=1.3",
    "optuna>=3.3",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "matplotlib>=3.8",
    "tqdm>=4.66"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers --disable-warnings -q"
testpaths = [
    "tests",
    "validation"
]
